Change colors for login buttons

--- a/Client/Pages/Login.razor
+++ b/Client/Pages/Login.razor
@@ -22,13 +22,13 @@
                 <MudCardContent>
                     <MudGrid>
                         <MudItem xs="12">
-                            <MudButton Link="/.auth/login/github" FullWidth="true" StartIcon="@Icons.Custom.Brands.GitHub" Variant="Variant.Filled" Color="Color.Transparent" Size="Size.Large">Login with GitHub</MudButton>
+                            <MudButton Link="/.auth/login/github" Color="Color.Default" FullWidth="true" StartIcon="@Icons.Custom.Brands.GitHub" Variant="Variant.Filled" Size="Size.Large">Login with GitHub</MudButton>
                         </MudItem>
                         <MudItem xs="12">
-                            <MudButton Link="/.auth/login/aad" FullWidth="true" StartIcon="@Icons.Custom.Brands.Microsoft" Variant="Variant.Filled" Color="Color.Info" Size="Size.Large">Login with Microsoft</MudButton>
+                            <MudButton Link="/.auth/login/aad" Color="Color.Dark" FullWidth="true" StartIcon="@Icons.Custom.Brands.Microsoft" Variant="Variant.Filled"  Size="Size.Large">Login with Microsoft</MudButton>
                         </MudItem>
                         <MudItem xs="12">
-                            <MudButton Link="/.auth/login/twitter" FullWidth="true" StartIcon="@Icons.Custom.Brands.Twitter" Variant="Variant.Filled" Color="Color.Info" Size="Size.Large">Login with Twitter</MudButton>
+                            <MudButton Link="/.auth/login/twitter" Color="Color.Info" FullWidth="true" StartIcon="@Icons.Custom.Brands.Twitter" Variant="Variant.Filled"  Size="Size.Large">Login with Twitter</MudButton>
                         </MudItem>
                     </MudGrid>
                 </MudCardContent>
