--- a/Client/Pages/Login.razor
+++ b/Client/Pages/Login.razor
@@ -1,7 +1,8 @@
 ﻿@page "/login"
-
 @attribute [AllowAnonymous]
+
 <PageTitle>Todo List - Login</PageTitle>
+
 <MudContainer Class="mt-10 mb-10" MaxWidth="MaxWidth.Small">
     <MudGrid >
         <MudItem xs="12">
@@ -22,13 +23,13 @@
                 <MudCardContent>
                     <MudGrid>
                         <MudItem xs="12">
-                            <MudButton Link="/.auth/login/github" Color="Color.Default" FullWidth="true" StartIcon="@Icons.Custom.Brands.GitHub" Variant="Variant.Filled" Size="Size.Large">Login with GitHub</MudButton>
+                            <MudButton Link="@AuthEndpoint.LoginProviders.GitHub" Color="Color.Default" FullWidth="true" StartIcon="@Icons.Custom.Brands.GitHub" Variant="Variant.Filled" Size="Size.Large">Login with GitHub</MudButton>
                         </MudItem>
                         <MudItem xs="12">
-                            <MudButton Link="/.auth/login/aad" Color="Color.Dark" FullWidth="true" StartIcon="@Icons.Custom.Brands.Microsoft" Variant="Variant.Filled"  Size="Size.Large">Login with Microsoft</MudButton>
+                            <MudButton Link="@AuthEndpoint.LoginProviders.Microsoft" Color="Color.Dark" FullWidth="true" StartIcon="@Icons.Custom.Brands.Microsoft" Variant="Variant.Filled"  Size="Size.Large">Login with Microsoft</MudButton>
                         </MudItem>
                         <MudItem xs="12">
-                            <MudButton Link="/.auth/login/twitter" Color="Color.Info" FullWidth="true" StartIcon="@Icons.Custom.Brands.Twitter" Variant="Variant.Filled"  Size="Size.Large">Login with Twitter</MudButton>
+                            <MudButton Link="@AuthEndpoint.LoginProviders.Twitter" Color="Color.Info" FullWidth="true" StartIcon="@Icons.Custom.Brands.Twitter" Variant="Variant.Filled"  Size="Size.Large">Login with Twitter</MudButton>
                         </MudItem>
                     </MudGrid>
                 </MudCardContent>
