--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -11,3 +11,4 @@
 @using MudBlazor
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization
+@using Client.Constants
